fix: atualização geral de portifolio: add certificados, mudança de foto, mudança de projetos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio de David Sousa</title>
 
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/popup.css">
@@ -44,11 +43,6 @@
     <div class="container mx-auto p-8">
         <section class="mb-16">
             <h2 class=" text-center text-4xl mb-4">Sobre Mim</h2>
-            <!-- <p class="text-lg">
-                Olá! Sou David Sousa, programador com foco em segurança cibernética, com excelente 
-                habilidade de comunicação. Minha compreensão tanto da programação quanto da segurança permite 
-                desenvolver softwares que asseguram a proteção dedados e mitigam riscos em ambientes digitais dinâmicos.
-            </p> -->
             <p class="text-lg text-justify">
                 Desenvolvedor de Software com experiência em Vue.js, Node.js, .NET e .NET MAUI, buscando sempre desenvolver aplicações escaláveis e bem estruturadas.  Tenho conhecimento em cibersegurança, o que me permite desenvolver com uma abordagem mais consciente em relação à segurança e com uma boa base em redes. 
                 <br>
@@ -62,8 +56,9 @@
 
                 <a href="https://github.com/DavidLSousa/app_investment"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
-                    <h5 class="text-xl font-bold mb-2">App Investment</h5>
-                    <p class="text-gray-400">Desenvolvimento de uma aplicação web utilizando Vue.js e .NET para gerenciamento de investimentos. A plataforma permite o controle detalhado de ativos na bolsa, oferecendo histórico completo e acompanhamento em tempo real das variações do portfólio. Usando containerizado com Docker.</p>
+                    <h5 class="text-xl font-bold mb-2">FinTrack</h5>
+                    <p class="text-gray-400">Desenvolvimento de uma aplicação web utilizando Vue.js e .NET para gerenciamento de investimentos. A plataforma permite o controle detalhado de ativos na bolsa, oferecendo histórico completo e acompanhamento em tempo real das variações do portfólio. </p>
+                    <!-- Usando containerizado com Docker. -->
                 </a>
 
                 <a href="https://github.com/DavidLSousa/theflashcards"
@@ -71,30 +66,6 @@
                     <h5 class="text-xl font-bold mb-2">The Flash Cards</h5>
                     <p class="text-gray-400">Desenvolvimento de um aplicativo multiplataforma (Desktop e Android) em .NET MAUI para criação de cartões de estudo com perguntas e respostas. Permite a montagem de simulados por categoria, registra acertos e erros e exibe estatísticas em um dashboard.</p>
                 </a>
-
-                <!-- <a href="https://calculadora-davidlsousa.netlify.app"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
-                    <h5 class="text-xl font-bold mb-2">Calculadora</h5>
-                    <p class="text-gray-400">Tentativa de algo simples porem funcional!</p>
-                </a> -->
-
-                <!-- <a href="https://todo-list-davidlsousa.netlify.app"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
-                    <h5 class="text-xl font-bold mb-2">Todo List</h5>
-                    <p class="text-gray-400">Um meio de não esquecer o que tem pra fazer...</p>
-                </a> -->
-
-                <!-- <a href="https://cpf-validator-davidlsousa.netlify.app"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
-                    <h5 class="text-xl font-bold mb-2">CPF Validator</h5>
-                    <p class="text-gray-400">Já precisou verificar se o CPF de alguém está correto?</p>
-                </a> -->
-
-                <!-- <a href="https://weather-app-davidlsousa.netlify.app/" target="_blank"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
-                    <h5 class="text-xl font-bold mb-2">Weather App</h5>
-                    <p class="text-gray-400">Será que vai chover?</p>
-                </a> -->
 
                 <a href="#" target="_blank"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
@@ -108,19 +79,15 @@
         <section class="text-center mb-16">
             <h2 class="text-4xl mb-8">Habilidades</h2>
             <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
-                <a href="https://github.com/DavidLSousa"
+                <a href="https://github.com/DavidLSousa/FinTrack"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
-                    HTML, CSS
+                    Vue.js
                 </a>
                 <a href="https://github.com/DavidLSousa"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     Node.js e TypeScript
                 </a>
-                <a href="https://github.com/DavidLSousa"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
-                    Vue.js
-                </a>
-                <a href="https://github.com/DavidLSousa"
+                <a href="https://github.com/DavidLSousa/app_investment"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     Python
                 </a>
@@ -128,14 +95,30 @@
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     C# .NET
                 </a>
-                <a href="https://github.com/DavidLSousa"
+                <a href="https://github.com/DavidLSousa/theflashcards"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     .NET MAUI
                 </a>
-                <a href="https://github.com/DavidLSousa"
+                <a href="https://www.linkedin.com/in/davidlsousadev/"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     Cybersecurity
                 </a>
+                <a href="https://github.com/DavidLSousa"
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
+                    Docker
+                </a>
+                <a href="https://github.com/DavidLSousa"
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
+                    Testes Automatizados
+                </a>
+                <a href="https://github.com/DavidLSousa"
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
+                    DB - SQL e NoSQL
+                </a>
+                <!-- <a href="https://github.com/DavidLSousa"
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
+                    AWS
+                </a> -->
             </div>
         </section>
 
@@ -143,15 +126,15 @@
             <h2 class="text-4xl mb-8">Certificações e Cursos</h2>
             <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
                 <a href="https://cursos.alura.com.br/certificate/ade01e1e-18d4-4c31-aba1-fa62fe02c6c2?lang"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center content-center">Ciclo de vida de aplicações: modelando, desenvolvendo e implantando um software
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center content-center">Ciclo de vida de aplicações
                 </a>
-                <a href="#"
+                <a href="https://on.fiap.com.br/local/nanocourses/gerar_certificado.php?chave=336be8c74a3cb5b46006a76aaf1a7a9d&action=view"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     Desenvolvimento .NET - FIAP
                 </a>
-                <a href="https://on.fiap.com.br/local/nanocourses/gerar_certificado.php?chave=0c059f37fefe2233c6fe4bb5cfbbd4ed&action=view" 
+                <a href="https://cursos.alura.com.br/certificate/31e09201-c2f7-4465-9b8d-c0847b06a06a?lang" 
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
-                    Dominando IoT - FIAP
+                    AWS - Amazon Lightsail
                 </a>
                 <a href="https://certificados.descomplica.com.br/graduacao/3ac66bf5c6cac3cb702da4569b07b0bc36c2193779bd6702902ade841153e73e"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
