--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
                     <p class="text-gray-400">Desenvolvimento de um aplicativo multiplataforma (Desktop e Android) em .NET MAUI para criação de cartões de estudo com perguntas e respostas. Permite a montagem de simulados por categoria, registra acertos e erros e exibe estatísticas em um dashboard.</p>
                 </a>
 
+                <a href="https://github.com/DavidLSousa/simpletodo"
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
+                    <h5 class="text-xl font-bold mb-2">Simple ToDo</h5>
+                    <p class="text-gray-400">Lista de Tarefas. Aplicação com Vue.js, Node.js e MariaDB, com autenticação via JWT para manter a sessão ativa. Permite gerenciar tarefas com adição, edição e exclusão. </p>
+                </a>
+
                 <a href="#" target="_blank"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">Challenge FIAP e Fortinet</h5>
@@ -213,3 +219,9 @@
 </body>
 
 </html>
+
+<!-- 
+    Add: 
+        [ ] Btn para download de curriculo
+
+-->
