--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div>
             <h1 class="text-5xl sm:text-6xl font-bold text-blue-900">David Sousa</h1>
-            <p class="font-bold text-black">Programador Web Full Stack</p>
+            <p class="font-bold text-black">Programador Web Backend</p>
 
             <div class="flex justify-center gap-4 p-16">
                 <div class="w-16 h-16 flex items-center">
@@ -41,12 +41,15 @@
     </header>
 
     <div class="container mx-auto p-8">
-        <section class="mb-16">
+        <section class="mb-16 align-center">
             <h2 class=" text-center text-4xl mb-4">Sobre Mim</h2>
             <p class="text-lg text-justify">
-                Desenvolvedor de Software com experiência em Vue.js, Node.js, .NET e .NET MAUI, buscando sempre desenvolver aplicações escaláveis e bem estruturadas.  Tenho conhecimento em cibersegurança, o que me permite desenvolver com uma abordagem mais consciente em relação à segurança e com uma boa base em redes. 
-                <br>
-                Além disso, estou sempre aprimorando minhas habilidades e explorando novas tecnologias para entregar software de alta qualidade. Busco oportunidades para aplicar minhas habilidades e contribuir para o desenvolvimento de soluções inovadoras.
+                Desenvolvedor Backend com experiência em Nest.js, TypeScript, Prisma ORM, PostgreSQL e Redis. 
+                Adoto práticas como TDD e Clean Code, com foco em escrever código desacoplado, testável e com 
+                boas abstrações. Tenho base sólida em redes e conhecimentos em cibersegurança, o que contribui 
+                para uma abordagem segura no desenvolvimento de sistemas. Estou em constante evolução técnica, 
+                buscando entregar soluções escaláveis, manuteníveis e de alta qualidade.
+
             </p>
         </section>
 
@@ -67,12 +70,6 @@
                     <p class="text-gray-400">Desenvolvimento de um aplicativo multiplataforma (Desktop e Android) em .NET MAUI para criação de cartões de estudo com perguntas e respostas. Permite a montagem de simulados por categoria, registra acertos e erros e exibe estatísticas em um dashboard.</p>
                 </a>
 
-                <a href="https://github.com/DavidLSousa/simpletodo"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
-                    <h5 class="text-xl font-bold mb-2">Simple ToDo</h5>
-                    <p class="text-gray-400">Lista de Tarefas. Aplicação com Vue.js, Node.js e MariaDB, com autenticação via JWT para manter a sessão ativa. Permite gerenciar tarefas com adição, edição e exclusão. </p>
-                </a>
-
                 <a href="#" target="_blank"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">Challenge FIAP e Fortinet</h5>
@@ -85,25 +82,13 @@
         <section class="text-center mb-16">
             <h2 class="text-4xl mb-8">Habilidades</h2>
             <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
-                <a href="https://github.com/DavidLSousa/FinTrack"
+                <a href="https://github.com/DavidLSousa"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
-                    Vue.js
+                    Nest.js
                 </a>
                 <a href="https://github.com/DavidLSousa"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     Node.js e TypeScript
-                </a>
-                <a href="https://github.com/DavidLSousa/app_investment"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
-                    Python
-                </a>
-                <a href="https://github.com/DavidLSousa" 
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
-                    C# .NET
-                </a>
-                <a href="https://github.com/DavidLSousa/theflashcards"
-                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
-                    .NET MAUI
                 </a>
                 <a href="https://www.linkedin.com/in/davidlsousadev/"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
@@ -113,13 +98,17 @@
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     Docker
                 </a>
-                <a href="https://github.com/DavidLSousa"
+                <!-- <a href="https://github.com/DavidLSousa"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     Testes Automatizados
-                </a>
+                </a> -->
                 <a href="https://github.com/DavidLSousa"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
                     DB - SQL e NoSQL
+                </a>
+                <a href="https://github.com/DavidLSousa"
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
+                    Redis
                 </a>
                 <!-- <a href="https://github.com/DavidLSousa"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition content-center">
