--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p class="text-lg text-justify">
                 Desenvolvedor Backend com experiência em Nest.js, TypeScript, Prisma ORM, PostgreSQL e Redis. 
                 Adoto práticas como TDD e Clean Code, com foco em escrever código desacoplado, testável e com 
-                boas abstrações. Tenho base sólida em redes e conhecimentos em cibersegurança, o que contribui 
+                boas práticas. Tenho base sólida em redes e conhecimentos em cibersegurança, o que contribui 
                 para uma abordagem segura no desenvolvimento de sistemas. Estou em constante evolução técnica, 
                 buscando entregar soluções escaláveis, manuteníveis e de alta qualidade.
 
