--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div>
             <h1 class="text-5xl sm:text-6xl font-bold text-blue-900">David Sousa</h1>
-            <p class="font-bold text-black">Desenvolvedor Backend</p>
+            <p class="font-bold text-black">Desenvolvedor FullStack com foco em Backend</p>
 
             <div class="flex justify-center gap-4 p-16">
                 <div class="w-16 h-16 flex items-center">
